syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.grpc.simple";
option java_outer_classname = "SimpleProto";
option objc_class_prefix = "HLW";

package simple;

service BarService {
  rpc GetBars(google.protobuf.Empty) returns(BarsResponse);
}

message Bar {
  double open = 1;
  double high = 2;
  double low = 3;
  double close = 4;
}

message BarsResponse {
  repeated Bar bars = 1;
}